--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3307
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=1234
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
