--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wat0YGsvE1RfKwK6nuvdruPkcivGRmcoeVRymK4YGH0=
+APP_KEY=base64:AxDABmhOLqvTyefREOGyic6p0wZSirBsdEQcd3cZAEs=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -21,8 +21,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3307
-DB_DATABASE=laravel
+DB_PORT=3306
+DB_DATABASE=videojuegosDb
 DB_USERNAME=root
 DB_PASSWORD=
 
