--- a/.env
+++ b/.env
@@ -21,10 +21,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=3307
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=1234
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
