--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
  DB_HOST=127.0.0.1
  DB_PORT=3307
- DB_DATABASE=gatitoxdpro
+ DB_DATABASE=tictactoe
  DB_USERNAME=root
  DB_PASSWORD=
 
